updates to leverage streams for several discoveries and performance updates on registrations.